# MC-Written-Book-Generator

./: .gitignore  LICENSE  README.md  cli.py  extended_width.json  install.bat  install.sh  main.py  pyproject.toml  ui.bat  ui.py  ui.sh
MCwrittenBookGenerator/: __init__.py  book.py  page.py
data/datapack_template/: pack.mcmeta
docs/: README-en.md
gui/: Ui_mainwindow.py  __init__.py  mainwindow.py  mainwindow.ui  output_buffer.py  ui_mainwindow.py
gui/logger/: __init__.py
src/written_book/: book.py  config.py  page.py
src/written_book.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/written_book/exception/: add_page_failed_exception.py
src/written_book_gui/: __init__.py  output_buffer.py  ui_mainwindow.py
src/written_book_gui/logger/: html_colored_formatter.py
written_book/: __init__.py  book.py  page.py
